created responsiveness for various devices

--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -4,88 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
         <nav>
-            <div>
+            <div class="logo-title">
                 <img src="" alt="logo"><h3>Your name</h3>
             </div>
-            <div>
-                <h3>
-                    <a href="">Home</a> /
-                    <a href="">Projects</a> /
-                    <a href="">Articles</a> /
-                    <a href="">Contact</a>
-                </h3>
-            </div>
+            <ul class="nav-link">
+                <li><a href="">Home</a> /</li>
+                <li><a href="">Projects</a> /</li>
+                <li><a href="">Articles</a> /</li>
+                <li><a href="">Contact</a></li>
+            </ul>
         </nav>
         <br>
-        <h1>Frontend Developer</h1>
-        <h4>html only with proper layout, no styling</h4>
+        <div class="middle-title">
+            <h1>Frontend Developer</h1>
+            <h4>html only with proper layout, no styling</h4>
+        </div>
     </div>
-    <div>
-        <div>
-            <div>
+    <div class="middle-section">
+        <div class="middle-2-section">
+            <div class="border">
                 <h3>Projects</h3>
                 <h4>HTML Only Portfolio</h4>
             </div>
-            <div>
+            <div class="border">
                 <h4>Calculator</h4>
             </div>
-            <div>
+            <div class="border">
                 <h4>Quiz App</h4>
             </div>
-            <div>
+            <div class="border">
                 <h4>Countdown Timer</h4>
             </div>
-            <div>
+            <div class="no-border">
                 <h4>Product Upcoming Page</h4>
             </div>
         </div>
-        <div>
-            <div>
+        <div class="middle-2-section">
+            <div class="border">
                 <h3>Work Experience</h3><br>
                 <a href="roadmap.sh">roadmap.sh</a>
                 <h4>Solved all the frontend projects</h4>
                 <a href="#">Visit my Profile</a>
             </div>
-            <div>
+            <div class="no-border">
                 <h3>OpenSource Work</h3>
                 <h4>Contributed to 50 opensource<br /> projects. Made my own projects with<br />200 Github Stars.</h4>
                 <a href="#">Visit my GitHub Profile</a>
             </div>
         </div>
-        <div>
-            <h3>Education</h3>
+        <div class="middle-2-section">
+            <h3 class="education">Education</h3>
             <h4>Graduated with 3.76 out of 4<br />CGPA. Won Acme Hackathon.<br />Organized 30 sessions.</h4>
-            <br>
-            <h4>Course I took:</h4>
-            <br>
-            <h4>- Object Oriented Programming.</h4>
-            <h4>- Data Structures and Algorithms</h4>
-            <h4>- Web Engineering</h4>
-            <h4>- Artificial Intellignence</h4>
-            <h4>- Human Computer Interaction</h4>
-            <h4>- Computer Graphics</h4>
-            <h4>- Database Management Systems</h4>
-            <h4>- Distributed Database Systems</h4>
-            <h4>- Discrete Mathematics</h4>
+            <h4 class="education">Course I took:</h4>
+            <h4 class="education">- Object Oriented Programming.</h4>
+            <h4 class="education">- Data Structures and Algorithms</h4>
+            <h4 class="education">- Web Engineering</h4>
+            <h4 class="education">- Artificial Intellignence</h4>
+            <h4 class="education">- Human Computer Interaction</h4>
+            <h4 class="education">- Computer Graphics</h4>
+            <h4 class="education">- Database Management Systems</h4>
+            <h4 class="education">- Distributed Database Systems</h4>
+            <h4 class="education">- Discrete Mathematics</h4>
         </div>
     </div>
-    <div>
-        <h3>Reviews from my Teachers</h3>
-        <div>
+    <h3>Reviews from my Teachers</h3>
+    <div class="last-section">
+        <div class="1">
             <h5>John doe was a brilliant<br />student; always stood out<br />with his assignments.</h5>
-            <h5>Jane Doe Assistant Professor</h5>
+            <h5 class="light">Jane Doe Assistant Professor</h5>
         </div>
-        <div>
+        <div class="sec2">
             <h5>John doe was a brilliant<br />student; always stood out<br />with his assignments.</h5>
-            <h5>Jane Doe Assistant Professor</h5>
+            <h5 class="light">Jane Doe Assistant Professor</h5>
         </div>
-        <div>
+        <div class="sec3">
             <h5>John doe was a brilliant<br />student; always stood out<br />with his assignments.</h5>
-            <h5>Jane Doe Assistant Professor</h5>
+            <h5 class="light">Jane Doe Assistant Professor</h5>
         </div>
     </div>
     <br><br><br>
